[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "cassio>=0.1.10",
    "langchain>=0.3.26",
    "langchain-community>=0.3.26",
    "langchain-groq>=0.3.4",
    "langchain-huggingface>=0.3.0",
    "langchain-tavily>=0.2.4",
    "langchainhub>=0.1.21",
    "langgraph>=0.5.0",
    "pymupdf>=1.26.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "sentence-transformers>=4.1.0",
    "streamlit>=1.46.1",
    "tiktoken>=0.9.0",
    "wikipedia>=1.4.0",
]
